@@ -1,6 +1,10 @@
 Changes with Apache 2.1.0-dev
 
   [Remove entries to the current 2.0 section below, when backported]
+  *) Win32: apache -k start|restart|install|config can leave stranded
+     piped logger processes (eg, rotatelogs.exe) due to improper
+     server shutdown on these code paths.
+     [Bill Stoddard]
 
   *) Restructured mod_auth_ldap to fit the new authentication model.
      The module is now called authnz_ldap and has been moved out of
